force-app/main/default/objects/Deal_Signal__c/Deal_Signal__c.object-meta.xml
<CustomObject>
    <description>Canonical signal store for deal health scoring and engagement tracking.</description>
    <label>Deal Signal</label>
    <nameField><label>Deal Signal Name</label><type>AutoNumber</type><displayFormat>DS-{000000}</displayFormat></nameField>
    <pluralLabel>Deal Signals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>