force-app/main/default/objects/Deal_Signal__c/fields/Adjustment_Details__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Details__c</fullName>
    <label>Adjustment Details</label>
    <description>Adjustment Details</description>
    <type>LongTextArea</type>
    <length>5000</length>
</CustomField>