force-app/main/default/objects/Deal_Signal__c/fields/Adjustment_Points__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Points__c</fullName>
    <label>Adjustment Points</label>
    <description>Adjustment Points</description>
    <type>Number</type>
    <precision>5</precision>
    <scale>1</scale>
</CustomField>