force-app/main/default/objects/Deal_Signal__c/fields/Calculation_Version__c.field-meta.xml
<CustomField>
    <fullName>Calculation_Version__c</fullName>
    <label>Calculation Version</label>
    <description>Calculation Version</description>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>