force-app/main/default/objects/Deal_Signal__c/fields/Call_Count_30d__c.field-meta.xml
<CustomField>
    <fullName>Call_Count_30d__c</fullName>
    <label>Call Count 30d</label>
    <description>Call Count 30d</description>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>