force-app/main/default/objects/Deal_Signal__c/fields/Champion_Reengaged__c.field-meta.xml
<CustomField>
    <fullName>Champion_Reengaged__c</fullName>
    <label>Champion Reengaged</label>
    <description>Champion Reengaged</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>