force-app/main/default/objects/Deal_Signal__c/fields/Champion_Strength__c.field-meta.xml
<CustomField>
    <fullName>Champion_Strength__c</fullName>
    <label>Champion Strength</label>
    <description>Champion Strength</description>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>