force-app/main/default/objects/Deal_Signal__c/fields/CI_Adapter_Name__c.field-meta.xml
<CustomField>
    <fullName>CI_Adapter_Name__c</fullName>
    <label>CI Adapter Name</label>
    <description>CI Adapter Name</description>
    <type>Text</type>
    <length>50</length>
</CustomField>