force-app/main/default/objects/Deal_Signal__c/fields/CI_Last_Sync__c.field-meta.xml
<CustomField>
    <fullName>CI_Last_Sync__c</fullName>
    <label>CI Last Sync</label>
    <description>CI Last Sync</description>
    <type>DateTime</type>
</CustomField>