force-app/main/default/objects/Deal_Signal__c/fields/Competitor_Count__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Count__c</fullName>
    <label>Competitor Count</label>
    <description>Competitor Count</description>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>