force-app/main/default/objects/Deal_Signal__c/fields/Competitor_Mentioned__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Mentioned__c</fullName>
    <label>Competitor Mentioned</label>
    <description>Competitor Mentioned</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>