force-app/main/default/objects/Deal_Signal__c/fields/Competitor_Names__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Names__c</fullName>
    <label>Competitor Names</label>
    <description>Competitor Names</description>
    <type>LongTextArea</type>
    <length>2000</length>
</CustomField>