force-app/main/default/objects/Deal_Signal__c/fields/Component_3_Score__c.field-meta.xml
<CustomField>
    <fullName>Component_3_Score__c</fullName>
    <label>Component 3 Score</label>
    <description>Component 3 Score</description>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>