force-app/main/default/objects/Deal_Signal__c/fields/Component_Weights__c.field-meta.xml
<CustomField>
    <fullName>Component_Weights__c</fullName>
    <label>Component Weights</label>
    <description>JSON applied weights</description>
    <type>Text</type>
    <length>200</length>
</CustomField>