force-app/main/default/objects/Deal_Signal__c/fields/CRM_Last_Sync__c.field-meta.xml
<CustomField>
    <fullName>CRM_Last_Sync__c</fullName>
    <label>CRM Last Sync</label>
    <description>CRM Last Sync</description>
    <type>DateTime</type>
</CustomField>