force-app/main/default/objects/Deal_Signal__c/fields/Days_In_Current_Stage__c.field-meta.xml
<CustomField>
    <fullName>Days_In_Current_Stage__c</fullName>
    <label>Days In Current Stage</label>
    <description>Days In Current Stage</description>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>