force-app/main/default/objects/Deal_Signal__c/fields/DM_Engagement_Score__c.field-meta.xml
<CustomField>
    <fullName>DM_Engagement_Score__c</fullName>
    <label>DM Engagement Score</label>
    <description>DM Engagement Score</description>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>