force-app/main/default/objects/Deal_Signal__c/fields/DM_Last_Response__c.field-meta.xml
<CustomField>
    <fullName>DM_Last_Response__c</fullName>
    <label>DM Last Response</label>
    <description>DM Last Response</description>
    <type>DateTime</type>
</CustomField>