force-app/main/default/objects/Deal_Signal__c/fields/Email_Response_Rate__c.field-meta.xml
<CustomField>
    <fullName>Email_Response_Rate__c</fullName>
    <label>Email Response Rate</label>
    <description>Email Response Rate</description>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>