force-app/main/default/objects/Deal_Signal__c/fields/Health_Score__c.field-meta.xml
<CustomField>
    <fullName>Health_Score__c</fullName>
    <label>Health Score</label>
    <description>Health Score</description>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>