force-app/main/default/objects/Deal_Signal__c/fields/Health_Score_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Health_Score_Configuration__c</fullName>
    <label>Health Score Configuration</label>
    <description>Health Score Configuration</description>
    <type>Lookup</type>
    <referenceTo>Health_Score_Configuration__c</referenceTo>
    <relationshipLabel>Deal Signals</relationshipLabel>
    <relationshipName>Deal_Signals_Config</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>