force-app/main/default/objects/Deal_Signal__c/fields/Last_Calculated__c.field-meta.xml
<CustomField>
    <fullName>Last_Calculated__c</fullName>
    <label>Last Calculated</label>
    <description>Last Calculated</description>
    <type>DateTime</type>
</CustomField>