force-app/main/default/objects/Deal_Signal__c/fields/Last_Mutual_Activity__c.field-meta.xml
<CustomField>
    <fullName>Last_Mutual_Activity__c</fullName>
    <label>Last Mutual Activity</label>
    <description>Last Mutual Activity</description>
    <type>DateTime</type>
</CustomField>