force-app/main/default/objects/Deal_Signal__c/fields/Meeting_Count_30d__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Count_30d__c</fullName>
    <label>Meeting Count 30d</label>
    <description>Meeting Count 30d</description>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>