force-app/main/default/objects/Deal_Signal__c/fields/Next_Step_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_Confirmed__c</fullName>
    <label>Next Step Confirmed</label>
    <description>Next Step Confirmed</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>