force-app/main/default/objects/Deal_Signal__c/fields/Next_Step_Description__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_Description__c</fullName>
    <label>Next Step Description</label>
    <description>Next Step Description</description>
    <type>LongTextArea</type>
    <length>500</length>
</CustomField>