force-app/main/default/objects/Deal_Signal__c/fields/No_Show_Count_30d__c.field-meta.xml
<CustomField>
    <fullName>No_Show_Count_30d__c</fullName>
    <label>No Show Count 30d</label>
    <description>No Show Count 30d</description>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>