force-app/main/default/objects/Deal_Signal__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <description>Opportunity</description>
    <type>Lookup</type>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Deal Signals</relationshipLabel>
    <relationshipName>Deal_Signals</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>