force-app/main/default/objects/Deal_Signal__c/fields/Primary_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Primary_Competitor__c</fullName>
    <label>Primary Competitor</label>
    <description>Primary Competitor</description>
    <type>Text</type>
    <length>100</length>
</CustomField>