force-app/main/default/objects/Deal_Signal__c/fields/Raw_Score__c.field-meta.xml
<CustomField>
    <fullName>Raw_Score__c</fullName>
    <label>Raw Score</label>
    <description>Raw Score</description>
    <type>Number</type>
    <precision>5</precision>
    <scale>1</scale>
</CustomField>