force-app/main/default/objects/Deal_Signal__c/fields/Relationship_Adapter_Name__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Adapter_Name__c</fullName>
    <label>Relationship Adapter Name</label>
    <description>Relationship Adapter Name</description>
    <type>Text</type>
    <length>50</length>
</CustomField>