force-app/main/default/objects/Deal_Signal__c/fields/Relationship_Freshness__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Freshness__c</fullName>
    <label>Relationship Freshness</label>
    <description>Relationship Freshness</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>LIVE</fullName><default>false</default><label>LIVE</label></value>
            <value><fullName>RECENT</fullName><default>false</default><label>RECENT</label></value>
            <value><fullName>STALE</fullName><default>false</default><label>STALE</label></value>
            <value><fullName>EXPIRED</fullName><default>false</default><label>EXPIRED</label></value>
            <value><fullName>MISSING</fullName><default>false</default><label>MISSING</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>