force-app/main/default/objects/Deal_Signal__c/fields/Relationship_Last_Sync__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Last_Sync__c</fullName>
    <label>Relationship Last Sync</label>
    <description>Relationship Last Sync</description>
    <type>DateTime</type>
</CustomField>