force-app/main/default/objects/Deal_Signal__c/fields/Score_Band__c.field-meta.xml
<CustomField>
    <fullName>Score_Band__c</fullName>
    <label>Score Band</label>
    <description>Score Band</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Green</fullName><default>false</default><label>Green</label></value>
            <value><fullName>Yellow</fullName><default>false</default><label>Yellow</label></value>
            <value><fullName>Red</fullName><default>false</default><label>Red</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>