force-app/main/default/objects/Deal_Signal__c/fields/Score_Smoothed__c.field-meta.xml
<CustomField>
    <fullName>Score_Smoothed__c</fullName>
    <label>Score Smoothed</label>
    <description>Score Smoothed</description>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>