force-app/main/default/objects/Deal_Signal__c/fields/Slip_Count__c.field-meta.xml
<CustomField>
    <fullName>Slip_Count__c</fullName>
    <label>Slip Count</label>
    <description>Slip Count</description>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>