force-app/main/default/objects/Deal_Signal__c/fields/Stage_Progression__c.field-meta.xml
<CustomField>
    <fullName>Stage_Progression__c</fullName>
    <label>Stage Progression</label>
    <description>Stage Progression</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Forward</fullName><default>false</default><label>Forward</label></value>
            <value><fullName>Stalled</fullName><default>false</default><label>Stalled</label></value>
            <value><fullName>Regressed</fullName><default>false</default><label>Regressed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>