force-app/main/default/objects/Deal_Signal__c/fields/Stakeholder_Count__c.field-meta.xml
<CustomField>
    <fullName>Stakeholder_Count__c</fullName>
    <label>Stakeholder Count</label>
    <description>Stakeholder Count</description>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>